feat: implement DTOs for Area and Perfil, update controllers to use DTOs for improved data handling